MAJOR change -realtivOrientation bug correction
Updated bindings, added patchyParticleAngular2

--- a/examples/benchmark/plotPatchyDimerFPTs.ipynb
+++ b/examples/benchmark/plotPatchyDimerFPTs.ipynb
@@ -25,7 +25,8 @@
     "boxsize = 6 #10 #8 #6 #5 \n",
     "D = 1.0\n",
     "Drot = 1.0\n",
-    "numTrajectories = 1000"
+    "numTrajectories = 1000\n",
+    "lagtime = 150"
    ]
   },
   {
@@ -78,7 +79,6 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "lagtime = 150\n",
     "numTrajs = 10000\n",
     "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_2bound_trajs' + \\\n",
     "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
@@ -273,7 +273,6 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "lagtime = 150\n",
     "numTrajs = 10000\n",
     "filenameA = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_A2unbound_trajs' + \\\n",
     "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
@@ -461,7 +460,6 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "lagtime = 150\n",
     "numTrajs = 10000\n",
     "filenameA = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_A2B_trajs' + \\\n",
     "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
@@ -578,7 +576,7 @@
    "outputs": [],
    "source": [
     "# Calculate meand and bootstrapping error\n",
-    "numBootsrapSamples = 1000\n",
+    "numBootsrapSamples = 2500\n",
     "meanKon = [0.0]*numBoxes\n",
     "meanKonMSMRD = [0.0]*numBoxes\n",
     "stdDevKon = [0.0]*numBoxes\n",
@@ -596,11 +594,11 @@
    "source": [
     "# Plot on rates vs concentration:\n",
     "fig = plt.figure()\n",
+    "fsize = 16\n",
     "plt.rcParams['xtick.labelsize']=fsize\n",
     "plt.rcParams['ytick.labelsize']=fsize\n",
     "ax = fig.add_subplot(111)\n",
     "linewidth = 2\n",
-    "fsize = 16\n",
     "concentrations = 1.0/pow(np.array(boxsizes),3)\n",
     "ax.errorbar(concentrations, meanKon, yerr=stdDevKon, marker='o', markersize=7, elinewidth=2, \n",
     "            linewidth=linewidth , capsize=5, color='C1', label='Benchmark')\n",
@@ -608,7 +606,7 @@
     "            elinewidth=2, linewidth=linewidth, capsize=5, color='C0', label='MSM/RD')\n",
     "ax.set_yscale('log')\n",
     "ax.set_xlabel(r'Concentration (1/Volume)', fontsize = fsize+2)\n",
-    "ax.set_ylabel(r'$k_\\mathrm{on}$', fontsize = fsize+8)\n",
+    "ax.set_ylabel(r'log($k_\\mathrm{on}$)', fontsize = fsize+8)\n",
     "#ax.set_ylim([0,0.12])\n",
     "ax.legend(fontsize=fsize, title_fontsize = fsize, fancybox=True)"
    ]
@@ -621,31 +619,6 @@
    "source": [
     "concentrations"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "boxsizes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pow(8,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
