--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "# Load discrete trajectories\n",
     "dtrajs = []\n",
-    "fnamesuffix = '_discrete_python' #'_discrete_python' # '_discrete'\n",
+    "fnamesuffix = '_discrete_test' #'_discrete_python' # '_discrete'\n",
     "filetype = 'xyz' #'xyz' # 'h5'\n",
     "for i in range(nfiles):\n",
     "    dtraj = trajectoryTools.loadDiscreteTrajectory(fnamebase, i, fnamesuffix, filetype)\n",
@@ -104,7 +104,7 @@
    "source": [
     "# Pickle MSM transition matrix and active set as a dictionary   \n",
     "MSM = {'transition_matrix' : mainmsm.transition_matrix, 'active_set': mainmsm.active_set}\n",
-    "pickle_out = open(\"../data/pickled_data/MSM_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
+    "pickle_out = open(\"../data/pickled_data/newMSM_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "pickle.dump(MSM, pickle_out)\n",
     "pickle_out.close()"
    ]
@@ -149,9 +149,9 @@
    "source": [
     "# Calculate implied time scales\n",
     "maxlagtime = 300\n",
-    "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
+    "#its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
     "# with error bars\n",
-    "# its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible, errors='bayes')"
+    "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible, errors='bayes')"
    ]
   },
   {
@@ -196,7 +196,7 @@
     "plt.xticks(fontsize = 28)\n",
     "plt.yticks(fontsize = 28)\n",
     "plt.ylim([10.0,6000])\n",
-    "#plt.savefig('its_dimer_strength60_final.pdf')"
+    "plt.savefig('its_dimer_strength60_final_alt.pdf')"
    ]
   },
   {
@@ -210,12 +210,12 @@
     "fig, ax = plt.subplots(figsize=(12, 7))\n",
     "mplt.plot_implied_timescales(its, ax = ax, nits = nits, ylog=False, units='steps', linewidth=2, dt=1, \n",
     "                             show_mean=False, markersize=0, confidence=0.95)\n",
-    "plt.ylabel(r\"log(timescale/steps)\", fontsize = 24)\n",
+    "plt.ylabel(r\"timescale/steps\", fontsize = 24)\n",
     "plt.xlabel(r\"lag time/steps\", fontsize = 24)\n",
     "plt.xticks(fontsize = 28)\n",
     "plt.yticks(fontsize = 28)\n",
     "plt.ylim([10.0,4500])\n",
-    "#plt.savefig('its_nolog_dimer_strength60_final.pdf')"
+    "plt.savefig('its_nolog_dimer_strength60_final_alt.pdf')"
    ]
   },
   {
@@ -224,10 +224,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eig0 = mainmsm.eigenvectors_right()[0]\n",
+    "eig0 = mainmsm.eigenvectors_right()[9]\n",
     "print(np.where(eig0>0.1))\n",
     "plt.plot(eig0)\n",
-    "plt.xlim([0,100])"
+    "plt.xlim([0,40])"
    ]
   },
   {
