Working quaternion potential for dimer in pentamer

--- a/examples/models/patchyParticlesAngular2.ipynb
+++ b/examples/models/patchyParticlesAngular2.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "# Define arbitrarily large list of rod-like particles\n",
     "np.random.seed(seed=1) # seed 1 good for pentamer \n",
-    "numparticles = 2\n",
+    "numparticles = 6\n",
     "boxsize = 3\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
@@ -114,7 +114,7 @@
     "# Define Patchy Particle potential\n",
     "sigma = 1.0\n",
     "strength = 160 #100# 60 #200.0\n",
-    "angularStrength = 0.1 #10 #200.0\n",
+    "angularStrength = 20 #10 #200.0\n",
     "angleDiff = 3*np.pi/5.0\n",
     "patch1 = np.array([np.cos(angleDiff/2),np.sin(angleDiff/2),0.])\n",
     "patch2 = np.array([np.cos(-angleDiff/2),np.sin(-angleDiff/2),0.])\n",
@@ -130,42 +130,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Integrate particle list and print only positions \n",
-    "#timesteps = 1000000 #20000000\n",
-    "#stride = 100 #250 #1000\n",
-    "#datafile  = open('../../data/vmd/patchyParticlesAngular2.xyz', 'w')\n",
-    "#for i in range(timesteps):\n",
-    "#    if i%stride == 0:\n",
-    "#        datafile.write(str(3*len(partlist)) + '\\n')\n",
-    "#        datafile.write(str(0) + '\\n')\n",
-    "#    for j, part in enumerate(partlist):\n",
-    "#        if i%stride == 0:\n",
-    "#            v0 = part.position\n",
-    "#            v1 = v0 + 0.5*sigma*quats.rotateVec(patchesCoordinates[0], part.orientation)\n",
-    "#            v2 = v0 + 0.5*sigma*quats.rotateVec(patchesCoordinates[1], part.orientation)\n",
-    "#            datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
-    "#            datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
-    "#            datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
-    "#    integrator.integrate(partlist)\n",
-    "#    if i%10000 == 0:\n",
-    "#        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
-    "#datafile.close()\n",
-    "## Generate TCL script to visualize with VMD\n",
-    "#msmrdvis.generateTCL_patchyParticles(numparticles = numparticles, \n",
-    "#                                     outfname = \"patchyParticlesAngular2\", \n",
-    "#                                     tclfname = \"../../data/vmd/patchyParticlesAngular2_2vmd.tcl\")\n",
-    "#print(\"Percentage complete: \", 100, \" %\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Colorful integration particle list and print only positions \n",
+    "#Integrate particle list and print only positions \n",
     "timesteps = 1000000 #20000000\n",
-    "stride = 100 #250 #1000\n",
+    "stride = 250 #250 #1000\n",
     "datafile  = open('../../data/vmd/patchyParticlesAngular2.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
@@ -176,21 +143,54 @@
     "            v0 = part.position\n",
     "            v1 = v0 + 0.5*sigma*quats.rotateVec(patchesCoordinates[0], part.orientation)\n",
     "            v2 = v0 + 0.5*sigma*quats.rotateVec(patchesCoordinates[1], part.orientation)\n",
-    "            if j == 0:\n",
-    "                datafile.write('type_00' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
-    "            else:\n",
-    "                datafile.write('type_01' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "            datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
     "            datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
-    "            datafile.write('type_2' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "            datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
     "    integrator.integrate(partlist)\n",
     "    if i%10000 == 0:\n",
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_patchyParticlesMultiColor(numparticles = numparticles, \n",
-    "                                     outfname = \"patchyParticlesAngular2\", \n",
-    "                                     tclfname = \"../../data/vmd/patchyParticlesAngular2_2vmd.tcl\")\n",
+    "msmrdvis.generateTCL_patchyParticles(numparticles = numparticles, \n",
+    "                                    outfname = \"patchyParticlesAngular2\", \n",
+    "                                    tclfname = \"../../data/vmd/patchyParticlesAngular2_2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # # Colorful integration particle list and print only positions \n",
+    "# timesteps = 1000000 #20000000\n",
+    "# stride = 1000 #250 #1000\n",
+    "# datafile  = open('../../data/vmd/patchyParticlesAngular2.xyz', 'w')\n",
+    "# for i in range(timesteps):\n",
+    "#     if i%stride == 0:\n",
+    "#         datafile.write(str(3*len(partlist)) + '\\n')\n",
+    "#         datafile.write(str(0) + '\\n')\n",
+    "#     for j, part in enumerate(partlist):\n",
+    "#         if i%stride == 0:\n",
+    "#             v0 = part.position\n",
+    "#             v1 = v0 + 0.5*sigma*quats.rotateVec(patchesCoordinates[0], part.orientation)\n",
+    "#             v2 = v0 + 0.5*sigma*quats.rotateVec(patchesCoordinates[1], part.orientation)\n",
+    "#             if j == 0:\n",
+    "#                 datafile.write('type_00' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "#             else:\n",
+    "#                 datafile.write('type_01' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "#             datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "#             datafile.write('type_2' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "#     integrator.integrate(partlist)\n",
+    "#     if i%10000 == 0:\n",
+    "#         print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
+    "# datafile.close()\n",
+    "# # Generate TCL script to visualize with VMD\n",
+    "# msmrdvis.generateTCL_patchyParticlesMultiColor(numparticles = numparticles, \n",
+    "#                                      outfname = \"patchyParticlesAngular2\", \n",
+    "#                                      tclfname = \"../../data/vmd/patchyParticlesAngular2_2vmd.tcl\")\n",
+    "# print(\"Percentage complete: \", 100, \" %\")"
    ]
   },
   {
