Updated scripts and notebook

--- a/examples/discretizeTrajectory.ipynb
+++ b/examples/discretizeTrajectory.ipynb
@@ -28,7 +28,8 @@
    "outputs": [],
    "source": [
     "# Load parameters from parameters file\n",
-    "parentDirectory = '../data/dimer/60strength/'\n",
+    "#parentDirectory = '../data/dimer/60strength/'\n",
+    "parentDirectory = '../data/pentamer/dimer/'\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading continuous trajectories from files (from original simulation)\n",
     "nfiles = parameterDictionary['numFiles']\n",
@@ -61,7 +62,11 @@
     "# Setup for discrete trajectory (in this case patchy dimer)\n",
     "numParticles = parameterDictionary['numParticles']\n",
     "bufferSize = effectivetimeSteps\n",
-    "discretizator = msmrd2.trajectories.patchyDimer(numParticles, effectivetimeSteps)\n",
+    "\n",
+    "# Set trajectory discretizator\n",
+    "#discretizator = msmrd2.trajectories.patchyDimer(numParticles, effectivetimeSteps)\n",
+    "discretizator = msmrd2.trajectories.patchyDimer2(numParticles, effectivetimeSteps)\n",
+    "\n",
     "# Set boundary (important for discretizer)\n",
     "boxBoundary = msmrd2.box(boxsize, boxsize, boxsize, boundaryType)\n",
     "discretizator.setBoundary(boxBoundary)"
