--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -23,7 +23,8 @@
    "outputs": [],
    "source": [
     "# Load parameters from parameters file\n",
-    "parentDirectory = '../data/dimer/60strength/'\n",
+    "#parentDirectory = '../data/dimer/60strength/'\n",
+    "parentDirectory = '../data/pentamer/dimer/'\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading files (from original simulation)\n",
     "nfiles = parameterDictionary['numFiles']\n",
@@ -58,7 +59,7 @@
    "source": [
     "# Load discrete trajectories\n",
     "dtrajs = []\n",
-    "fnamesuffix = '_discrete_test' #'_discrete_python' # '_discrete'\n",
+    "fnamesuffix = '_discrete' #'_discrete_test' #'_discrete_python' # '_discrete'\n",
     "filetype = 'xyz' #'xyz' # 'h5'\n",
     "for i in range(nfiles):\n",
     "    dtraj = trajectoryTools.loadDiscreteTrajectory(fnamebase, i, fnamesuffix, filetype)\n",
@@ -104,7 +105,10 @@
    "source": [
     "# Pickle MSM transition matrix and active set as a dictionary   \n",
     "MSM = {'transition_matrix' : mainmsm.transition_matrix, 'active_set': mainmsm.active_set}\n",
-    "pickle_out = open(\"../data/pickled_data/newMSM_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
+    "#pickle_out = open(\"../data/pickled_data/MSM_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
+    "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
+    "pickle_out = open(\"../data/pickled_data/MSM_pentamer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
+    "\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "pickle.dump(MSM, pickle_out)\n",
     "pickle_out.close()"
    ]
@@ -138,7 +142,7 @@
    "outputs": [],
    "source": [
     "mplt.plot_cktest(cktest);\n",
-    "plt.savefig('cktest12.pdf')"
+    "#plt.savefig('cktest12.pdf')"
    ]
   },
   {
@@ -149,9 +153,9 @@
    "source": [
     "# Calculate implied time scales\n",
     "maxlagtime = 300\n",
-    "#its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
+    "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
     "# with error bars\n",
-    "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible, errors='bayes')"
+    "#its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible, errors='bayes')"
    ]
   },
   {
@@ -165,7 +169,7 @@
     "mplt.plot_implied_timescales(its, nits = nits, ylog=True, units='steps', linewidth=1, dt=1)\n",
     "plt.ylabel(r\"log(timescale/steps)\", fontsize = 18)\n",
     "plt.xlabel(r\"lag time/steps\", fontsize = 18)\n",
-    "plt.ylim([10.0,8000])"
+    "#plt.ylim([10.0,8000])"
    ]
   },
   {
@@ -196,7 +200,7 @@
     "plt.xticks(fontsize = 28)\n",
     "plt.yticks(fontsize = 28)\n",
     "plt.ylim([10.0,6000])\n",
-    "plt.savefig('its_dimer_strength60_final_alt.pdf')"
+    "#plt.savefig('its_dimer_strength60_final_alt.pdf')"
    ]
   },
   {
@@ -215,7 +219,7 @@
     "plt.xticks(fontsize = 28)\n",
     "plt.yticks(fontsize = 28)\n",
     "plt.ylim([10.0,4500])\n",
-    "plt.savefig('its_nolog_dimer_strength60_final_alt.pdf')"
+    "#plt.savefig('its_nolog_dimer_strength60_final_alt.pdf')"
    ]
   },
   {
