Update to multiparticle MSMRD integrator
Work in progres...

--- a/examples/discretizeTrajectory.ipynb
+++ b/examples/discretizeTrajectory.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "# Set trajectory discretizator\n",
     "#discretizator = msmrd2.trajectories.patchyDimer(numParticles, effectivetimeSteps)\n",
-    "discretizator = msmrd2.trajectories.patchyDimer2(numParticles, effectivetimeSteps)\n",
+    "discretizator = msmrd2.trajectories.patchyDimer2(numParticles, effectivetimeSteps, 1.25, 2.25)\n",
     "\n",
     "# Set boundary (important for discretizer)\n",
     "boxBoundary = msmrd2.box(boxsize, boxsize, boxsize, boundaryType)\n",
