--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -46,7 +46,7 @@
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
     "lagtime = 150\n",
-    "reversible = True\n",
+    "reversible = True #False\n",
     "stitching = True\n",
     "fullDictionary = False # Only rates to and from bound states."
    ]
@@ -169,6 +169,7 @@
     "mplt.plot_implied_timescales(its, nits = nits, ylog=True, units='steps', linewidth=1, dt=1)\n",
     "plt.ylabel(r\"log(timescale/steps)\", fontsize = 18)\n",
     "plt.xlabel(r\"lag time/steps\", fontsize = 18)\n",
+    "#plt.ylim([10.0,100000])\n",
     "#plt.ylim([10.0,8000])"
    ]
   },
@@ -199,8 +200,9 @@
     "plt.xlabel(r\"lag time/steps\", fontsize = 24)\n",
     "plt.xticks(fontsize = 28)\n",
     "plt.yticks(fontsize = 28)\n",
-    "plt.ylim([10.0,6000])\n",
-    "#plt.savefig('its_dimer_strength60_final_alt.pdf')"
+    "plt.ylim([10.0,100000])\n",
+    "#plt.savefig('its_dimer_strength60_final_alt.pdf')\n",
+    "#plt.savefig('its_pentamer_strength80_test.pdf')"
    ]
   },
   {
@@ -218,8 +220,9 @@
     "plt.xlabel(r\"lag time/steps\", fontsize = 24)\n",
     "plt.xticks(fontsize = 28)\n",
     "plt.yticks(fontsize = 28)\n",
-    "plt.ylim([10.0,4500])\n",
-    "#plt.savefig('its_nolog_dimer_strength60_final_alt.pdf')"
+    "plt.ylim([10.0,40000])\n",
+    "#plt.savefig('its_nolog_dimer_strength60_final_alt.pdf')\n",
+    "#plt.savefig('its_nolog_pentamer_strength80_test.pdf')"
    ]
   },
   {
@@ -228,10 +231,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eig0 = mainmsm.eigenvectors_right()[9]\n",
-    "print(np.where(eig0>0.1))\n",
+    "eig0 = mainmsm.eigenvectors_left()[0]\n",
+    "print(np.where(np.abs(eig0)>0.1))\n",
     "plt.plot(eig0)\n",
-    "plt.xlim([0,40])"
+    "plt.xlim([0,10])"
    ]
   },
   {
