Update multiparticle integrator

--- a/examples/models/patchyParticles.ipynb
+++ b/examples/models/patchyParticles.ipynb
@@ -205,15 +205,18 @@
    "source": [
     "# Plot potential\n",
     "plt.figure(figsize=(7,5))\n",
-    "plt.rcParams.update({'font.size': 22})\n",
-    "plt.plot(dist, potantialAligned, label = \"aligned\")\n",
-    "plt.plot(dist, potantialMisaligned, label = \"misaligned\")\n",
+    "fsize = 22\n",
+    "plt.rcParams.update({'font.size': fsize})\n",
+    "plt.plot(dist, potantialAligned, label = r'aligned', lw =2)\n",
+    "plt.plot(dist, potantialMisaligned, label = r'misaligned', lw=2)\n",
     "plt.plot(dist, 0*dist, '--k', lw=0.5)\n",
-    "plt.legend()\n",
+    "#plt.legend(fancybox=True)\n",
+    "plt.legend(fontsize=28, labelspacing=2, framealpha=1.0, edgecolor='white', fancybox=True, bbox_to_anchor=(1.3, 1.0))\n",
     "plt.xlim([0,2*sigma])\n",
-    "plt.xlabel(\"Relative distance\")\n",
-    "plt.ylabel(\"Potential\")\n",
-    "plt.yticks([])"
+    "plt.xlabel(r'Relative distance')\n",
+    "plt.ylabel(r'Potential')\n",
+    "plt.yticks([])\n",
+    "#plt.savefig('patchyParticles_potential.pdf', bbox_inches='tight')"
    ]
   },
   {
