Removed deprecated MSM/RD integrator
and renamed current one

--- a/examples/testMSMRDintegrator.ipynb
+++ b/examples/testMSMRDintegrator.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import msmrd2\n",
     "from msmrd2.markovModels import continuousTimeMarkovStateModel as ctmsm\n",
-    "from msmrd2.markovModels import msmrdMarkovStateModel as msmrdMSM\n",
+    "from msmrd2.markovModels import msmrdMarkovModelDiscrete as msmrdMSMDiscrete\n",
     "from msmrd2.integrators import msmrdIntegrator "
    ]
   },
@@ -23,25 +23,25 @@
     "# Main parameters\n",
     "numBoundStates = 8\n",
     "maxNumBoundStates = 10\n",
-    "radialBounds = [1.4, 2.2]\n",
+    "radialBounds = [1.25, 2.25]\n",
     "relativeDistanceCutOff = radialBounds[1]\n",
     "numParticleTypes = 1 # num. of particle types (not states) in unbound state\n",
     "boxsize = 6\n",
     "\n",
     "# Discretization parameters (need to be consistent with those of integrator\n",
-    "numSphericalSectionsPos = 7\n",
-    "numRadialSectionsQuat = 5\n",
-    "numSphericalSectionsQuat = 7\n",
+    "numSphericalSectionsPos = 7 #7\n",
+    "numRadialSectionsQuat = 5 #5\n",
+    "numSphericalSectionsQuat = 7 #7\n",
     "totalnumSecsQuat = numSphericalSectionsQuat*(numRadialSectionsQuat -1) + 1\n",
     "numTransitionsStates = numSphericalSectionsPos * totalnumSecsQuat #203 \n",
     "\n",
     "# Trajectory relevant parameters (Need to be equal to the one used to generate the rateDictionary)\n",
-    "dt = 0.00001\n",
-    "lagtime = 200 \n",
-    "effectiveLagtime = dt*lagtime # Just for reference, not required since it is handled directly by rateDicitonary\n",
-    "# Other trajectory parameters for reference.\n",
-    "timesteps = 4000000 # 2000000\n",
+    "dt = 0.0001\n",
+    "original_dt = 0.00001\n",
+    "lagtime = 150\n",
+    "timesteps = 3000000 # 2000000\n",
     "stride = 25 #2500\n",
+    "realLagtime = lagtime*original_dt*stride\n",
     "maxentries = int(timesteps/stride)"
    ]
   },
@@ -52,8 +52,10 @@
    "outputs": [],
    "source": [
     "# Load pickled rateDicitionary generated in generateRateDictionary\n",
-    "pickle_in = open(\"pickled_data/ratedictionary_dimer_t2.00E+06_s25_lagt200.pickle\",\"rb\")\n",
-    "rateDictionary = pickle.load(pickle_in)"
+    "pickle_in = open(\"../data/pickled_data/MSM_dimer_t3.00E+06_s25_lagt150.pickle\",\"rb\")\n",
+    "mainMSM = pickle.load(pickle_in)\n",
+    "tmatrix = mainMSM['transition_matrix']\n",
+    "activeSet = mainMSM['active_set']"
    ]
   },
   {
@@ -81,11 +83,10 @@
    "source": [
     "# Define coupling Markov model\n",
     "seed = 0\n",
-    "Dbound = [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]\n",
-    "DboundRot = [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
-    "couplingMSM = msmrdMSM(numBoundStates, numTransitionsStates, seed, rateDictionary) \n",
-    "couplingMSM.setDbound(Dbound, DboundRot)\n",
-    "couplingMSM.setMaxNumberBoundStates(maxNumBoundStates)"
+    "Dbound = [0.5]*numBoundStates\n",
+    "DboundRot = [1.0]*numBoundStates\n",
+    "couplingMSM = msmrdMSMDiscrete(numBoundStates, maxNumBoundStates, tmatrix, activeSet, realLagtime, seed) \n",
+    "couplingMSM.setDbound(Dbound, DboundRot)"
    ]
   },
   {
@@ -129,8 +130,6 @@
    "source": [
     "# Set boundary and discretization in integrator (optional since default values also work)\n",
     "boundary = msmrd2.box(boxsize,boxsize,boxsize,'periodic')\n",
-    "#boundary = msmrd2.sphere(boxsize,'reflective')\n",
-    "#boundary = msmrd2.noBoundary()\n",
     "integrator.setBoundary(boundary)\n",
     "discretization = msmrd2.discretizations.positionOrientationPartition(relativeDistanceCutOff, numSphericalSectionsPos,\n",
     "                                                                    numRadialSectionsQuat, numSphericalSectionsQuat)\n",
@@ -155,12 +154,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "prevstate = 0\n",
     "for i in range(20000000):\n",
     "    integrator.integrate(partList)\n",
-    "    if (partList[0].state != prevstate):\n",
-    "        print(\"{:.4f}\".format(integrator.clock), partList[0].state, partList[1].state)\n",
+    "    #print(partList[0].position, partList[1].position, partList[0].state, partList[1].state, partList[0].boundTo, partList[1].boundTo)\n",
+    "    if (partList[0].boundState != prevstate):\n",
+    "        print(\"{:.4f}\".format(integrator.clock), partList[0].boundState, partList[1].boundState)\n",
     "        #print(partList[0].position, partList[1].position, partList[0].state, partList[1].state, partList[0].boundTo, partList[1].boundTo)\n",
-    "        prevstate = partList[0].state"
+    "        prevstate = partList[0].boundState"
    ]
   },
   {
@@ -168,38 +169,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(partList[0].position, partList[1].position, \n",
-    "      partList[0].state, partList[1].state, \n",
-    "      partList[0].boundTo, partList[1].boundTo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rateDictionary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "couplingMSM.computeTransition2BoundState(180)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "couplingMSM.computeTransition2UnboundState(2)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
