--- a/examples/testMSMRDintegrator.ipynb
+++ b/examples/testMSMRDintegrator.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import msmrd2\n",
     "from msmrd2.markovModels import continuousTimeMarkovStateModel as ctmsm\n",
-    "from msmrd2.markovModels import msmrdMarkovModelDiscrete as msmrdMSMDiscrete\n",
+    "from msmrd2.markovModels import msmrdMarkovModel as msmrdMSM\n",
     "from msmrd2.integrators import msmrdIntegrator "
    ]
   },
@@ -85,7 +85,7 @@
     "seed = 0\n",
     "Dbound = [0.5]*numBoundStates\n",
     "DboundRot = [1.0]*numBoundStates\n",
-    "couplingMSM = msmrdMSMDiscrete(numBoundStates, maxNumBoundStates, tmatrix, activeSet, realLagtime, seed) \n",
+    "couplingMSM = msmrdMSM(numBoundStates, maxNumBoundStates, tmatrix, activeSet, realLagtime, seed) \n",
     "couplingMSM.setDbound(Dbound, DboundRot)"
    ]
   },
