Modularize patchyProteins potentials

--- a/examples/models/patchyProteins.ipynb
+++ b/examples/models/patchyProteins.ipynb
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "# Define boundary (choose either spherical or box)\n",
-    "radius = 5.0\n",
+    "radius = 3.0\n",
     "sphereBoundary = msmrd2.sphere(radius,'reflective')\n",
     "integrator.setBoundary(sphereBoundary)"
    ]
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 500000 #50000000\n",
+    "timesteps = 1000000 #50000000\n",
     "stride = 1000 #1000\n",
     "datafile  = open('../../data/vmd/patchyProteins.xyz', 'w')\n",
     "for i in range(timesteps):\n",
