Finsihed patchyProteinMS potential...
but still need to solve one small inheritance issue

--- a/examples/models/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/models/patchyProteinsMarkovSwitch.ipynb
@@ -22,47 +22,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define two particle list of rigid body particles\n",
-    "numparticles = 2\n",
-    "state = 0\n",
-    "D = 1.0\n",
-    "Drot = 1.0\n",
-    "pyPartlist = [] \n",
-    "positionList = [np.array([1.0,0,0]), np.array([-1.,0.,0.])]\n",
-    "orientationList = [ np.array([1.,0.,0.,0.]), np.array([np.cos(np.pi/2),0.,0.,np.sin(np.pi/2)])]\n",
-    "for i in range(numparticles):      \n",
-    "    ptype = i\n",
-    "    part = msmrd2.particleMS(ptype, state,D, Drot, positionList[i], orientationList[i])\n",
-    "    pyPartlist.append(part)\n",
-    "pyPartlist[0].setMSMoff()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create list of particles that can be read from msmrd\n",
-    "# Note the particles in this list will be independent from the python list.\n",
-    "partlist = msmrd2.integrators.particleMSList(pyPartlist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define CTMSM\n",
+    "# Define CTMSMs\n",
+    "# MSM for particle type0\n",
+    "MSMtype = 0\n",
+    "seed = 0 # If seed = -1 uses random device as seed\n",
+    "markovModel0 = ctmsm(MSMtype, seed) # If no rate matrix specified, yields ratematrix [[0]]\n",
+    "D0list = np.array([1.0])\n",
+    "Drot0list = np.array([1.0])\n",
+    "markovModel0.setD(D0list)\n",
+    "markovModel0.setDrot(Drot0list)\n",
+    "\n",
+    "# MSM for particle type1 \n",
     "MSMtype = 1\n",
     "ratematrix = np.array([[-5.0,5.0],[6.0,-6.0]])\n",
     "seed = 0 # If seed = -1 uses random device as seed\n",
-    "markovModel = ctmsm(MSMtype, ratematrix, seed)\n",
-    "Dlist = np.array([0.5, 1.0])\n",
-    "Drotlist = np.array([0.5, 1.0])\n",
-    "markovModel.setD(Dlist)\n",
-    "markovModel.setDrot(Drotlist)"
+    "markovModel1 = ctmsm(MSMtype, ratematrix, seed)\n",
+    "D1list = np.array([0.5, 1.0])\n",
+    "Drot1list = np.array([0.5, 1.0])\n",
+    "markovModel1.setD(D1list)\n",
+    "markovModel1.setDrot(Drot1list)\n",
+    "\n",
+    "# Create MSMlist\n",
+    "MSMlist = [markovModel0, markovModel1] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Particle definition\n",
+    "numparticles = 2\n",
+    "p1type = 0\n",
+    "p2type = 1\n",
+    "pstate = 0\n",
+    "positions = [np.array([1.,0,0]), np.array([-1.,0.,0.])]\n",
+    "orientations = [ np.array([1.,0.,0.,0.]), np.array([np.cos(np.pi/2),0.,0.,np.sin(np.pi/2)])]\n",
+    "part1 = msmrd2.particleMS(p1type, pstate, D0list[pstate], Drot0list[pstate], positions[0], orientations[0])\n",
+    "part2 = msmrd2.particleMS(p2type, pstate, D1list[pstate], Drot1list[pstate], positions[1], orientations[1])\n",
+    "partlist = msmrd2.integrators.particleMSList([part1, part2])"
    ]
   },
   {
@@ -75,7 +74,7 @@
     "dt = 0.00001 #0.000005\n",
     "seed = 0 # If seed = -1 uses random device as seed\n",
     "bodytype = 'rigidbody' # Mix indicates there can be different types of rigidbody particles\n",
-    "integrator = odLangevinMS(markovModel, dt, seed, bodytype) \n",
+    "integrator = odLangevinMS(MSMlist, dt, seed, bodytype) \n",
     "integrator.setKbT(1.0)"
    ]
   },
@@ -86,7 +85,7 @@
    "outputs": [],
    "source": [
     "# Define boundary (choose either spherical or box)\n",
-    "radius = 5.0\n",
+    "radius = 3.0\n",
     "sphereBoundary = msmrd2.sphere(radius,'reflective')\n",
     "integrator.setBoundary(sphereBoundary)"
    ]
@@ -97,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Patchy Protein potential\n",
+    "# # Define Patchy Protein potential\n",
     "sigma = 1.0\n",
     "strength = 65\n",
     "patchesCoordinates1 = [np.array([1.,0.,0.]), \n",
@@ -117,13 +116,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Integrate particle list and print only positions \n",
-    "timesteps = 50000 #50000000\n",
+    "# Integrate particle list and print only positions. Adds an extra far away particle to \n",
+    "# emulate change of color/conformation since VMD can only handle a fixed number of particle with fixed types.\n",
+    "timesteps = 500000 #50000000\n",
     "stride = 100 #1000\n",
     "datafile  = open('../../data/vmd/patchyProteinsMS.xyz', 'w')\n",
+    "farAwayPostion = np.array([3*radius, 0, 0])\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
-    "        datafile.write(str(9) + '\\n')\n",
+    "        datafile.write(str(10) + '\\n')\n",
     "        datafile.write(str(0) + '\\n')\n",
     "    for j, part in enumerate(partlist):\n",
     "        if i%stride == 0:\n",
@@ -146,10 +147,15 @@
     "                v0 = part.position\n",
     "                if part.state == 0:\n",
     "                    v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "                    datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                    datafile.write('type_3' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
+    "                    datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "                else:\n",
     "                    v1 = 1.0*v0\n",
-    "                datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
-    "                datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "                    datafile.write('type_0' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
+    "                    datafile.write('type_3' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                    datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "\n",
     "    integrator.integrate(partlist)\n",
     "    if i%5000 == 0:\n",
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
@@ -158,6 +164,13 @@
     "msmrdvis.generateTCL_patchyProteinsMS(numparticles = numparticles, tclfname = \"../../data/vmd/patchyProteinsMS2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
