Working first patchyProteinMS

--- a/examples/models/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/models/patchyProteinsMarkovSwitch.ipynb
@@ -122,9 +122,10 @@
     "stride = 10 #1000\n",
     "datafile  = open('../../data/vmd/patchyProteinsMS.xyz', 'w')\n",
     "farAwayPostion = np.array([3*radius, 0, 0])\n",
-    "for i in range(timesteps):\n",
+    "numSpheres2Draw= 11\n",
+    "for i in  range(timesteps):\n",
     "    if i%stride == 0:\n",
-    "        datafile.write(str(10) + '\\n')\n",
+    "        datafile.write(str(numSpheres2Draw) + '\\n')\n",
     "        datafile.write(str(0) + '\\n')\n",
     "    for j, part in enumerate(partlist):\n",
     "        if i%stride == 0:\n",
@@ -136,7 +137,9 @@
     "                v4 = v0 + 0.3*sigma*quats.rotateVec(patchesCoordinates1[3], part.orientation)\n",
     "                v5 = v0 + 0.3*sigma*quats.rotateVec(patchesCoordinates1[4], part.orientation)\n",
     "                v6 = v0 + 0.3*sigma*quats.rotateVec(patchesCoordinates1[5], part.orientation)\n",
+    "                # Main particle 1\n",
     "                datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                # Pacthes\n",
     "                datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "                datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
     "                datafile.write('type_1' + ' ' + ' '.join(map(str, v3)) + '\\n')\n",
@@ -147,14 +150,21 @@
     "                v0 = part.position\n",
     "                if part.state == 0:\n",
     "                    v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "                    # Main particle 2\n",
     "                    datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
     "                    datafile.write('type_3' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
+    "                    # Patch\n",
     "                    datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "                    datafile.write('type_4' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
+    "\n",
     "                else:\n",
-    "                    v1 = 1.0*v0\n",
+    "                    v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "                    # Main particle 2\n",
     "                    datafile.write('type_0' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
     "                    datafile.write('type_3' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
-    "                    datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "                    # Patch\n",
+    "                    datafile.write('type_2' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
+    "                    datafile.write('type_4' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "\n",
     "    integrator.integrate(partlist)\n",
     "    if i%5000 == 0:\n",
