Updated patchyProtein Potential

--- a/examples/models/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/models/patchyProteinsMarkovSwitch.ipynb
@@ -99,14 +99,20 @@
     "# # Define Patchy Protein potential\n",
     "sigma = 1.0\n",
     "strength = 65\n",
+    "referencePatch = np.array([0.,0.,1.])\n",
+    "# The index i and i+1 of patchesCoordinates1 must be orthogonal for potential to work correctly.\n",
     "patchesCoordinates1 = [np.array([1.,0.,0.]), \n",
     "                       np.array([0.,1.,0.]),\n",
+    "                       np.array([0.,0.,1.]),\n",
     "                       np.array([-1.,0.,0.]),\n",
     "                       np.array([0.,-1.,0.]),\n",
-    "                       np.array([0.,0.,1.]),\n",
     "                       np.array([0.,0.,-1.])]\n",
     "patchesCoordinates2 = [np.array([1.,0.,0.])]\n",
+    "# Defines patchy protein potential\n",
     "potentialPatchyProteinMS = patchyProteinMarkovSwitch(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
+    "# Sets reference patch for particle2 to define 3 degree of freedom orientation (only one patch is not enough)\n",
+    "potentialPatchyProteinMS.setReferencePatch(referencePatch) \n",
+    "# Incorporate potential into integrator\n",
     "integrator.setPairPotential(potentialPatchyProteinMS)"
    ]
   },
