--- a/examples/models/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/models/patchyProteinsMarkovSwitch.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "# MSM for particle type1 \n",
     "MSMtype = 1\n",
-    "ratematrix = np.array([[-5.0,5.0],[6.0,-6.0]])\n",
+    "ratematrix = np.array([[-1.0,1.0],[8.0,-8.0]])\n",
     "seed = 0 # If seed = -1 uses random device as seed\n",
     "markovModel1 = ctmsm(MSMtype, ratematrix, seed)\n",
     "D1list = np.array([0.5, 1.0])\n",
@@ -56,11 +56,12 @@
     "numparticles = 2\n",
     "p1type = 0\n",
     "p2type = 1\n",
-    "pstate = 0\n",
+    "p1state = 0\n",
+    "p2state = 1\n",
     "positions = [np.array([1.,0,0]), np.array([-1.,0.,0.])]\n",
     "orientations = [ np.array([1.,0.,0.,0.]), np.array([np.cos(np.pi/2),0.,0.,np.sin(np.pi/2)])]\n",
-    "part1 = msmrd2.particle(p1type, pstate, D0list[pstate], Drot0list[pstate], positions[0], orientations[0])\n",
-    "part2 = msmrd2.particle(p2type, pstate, D1list[pstate], Drot1list[pstate], positions[1], orientations[1])\n",
+    "part1 = msmrd2.particle(p1type, p1state, D0list[p1state], Drot0list[p1state], positions[0], orientations[0])\n",
+    "part2 = msmrd2.particle(p2type, p2state, D1list[p2state], Drot1list[p2state], positions[1], orientations[1])\n",
     "partlist = msmrd2.integrators.particleList([part1, part2])"
    ]
   },
@@ -85,7 +86,7 @@
    "outputs": [],
    "source": [
     "# Define boundary (choose either spherical or box)\n",
-    "radius = 3.0\n",
+    "radius = 2.0 #3.0\n",
     "sphereBoundary = msmrd2.sphere(radius,'reflective')\n",
     "integrator.setBoundary(sphereBoundary)"
    ]
@@ -99,7 +100,7 @@
     "# # Define Patchy Protein potential\n",
     "sigma = 1.0\n",
     "strength = 65\n",
-    "referencePatch = np.array([0.,0.,1.])\n",
+    "referencePatch1 = np.array([0.,0.,1.])\n",
     "# The index i and i+1 of patchesCoordinates1 must be orthogonal for potential to work correctly.\n",
     "patchesCoordinates1 = [np.array([1.,0.,0.]), \n",
     "                       np.array([0.,1.,0.]),\n",
@@ -111,7 +112,7 @@
     "# Defines patchy protein potential\n",
     "potentialPatchyProteinMS = patchyProteinMarkovSwitch(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
     "# Sets reference patch for particle2 to define 3 degree of freedom orientation (only one patch is not enough)\n",
-    "potentialPatchyProteinMS.setReferencePatch(referencePatch) \n",
+    "potentialPatchyProteinMS.setReferencePatch(referencePatch1) \n",
     "# Incorporate potential into integrator\n",
     "integrator.setPairPotential(potentialPatchyProteinMS)"
    ]
@@ -124,11 +125,18 @@
    "source": [
     "# Integrate particle list and print only positions. Adds an extra far away particle to \n",
     "# emulate change of color/conformation since VMD can only handle a fixed number of particle with fixed types.\n",
-    "timesteps = 500000 #50000000\n",
-    "stride = 10 #1000\n",
+    "timesteps = 1000000 #50000000\n",
+    "stride = 1000 #10 #1000\n",
     "datafile  = open('../../data/vmd/patchyProteinsMS.xyz', 'w')\n",
-    "farAwayPostion = np.array([3*radius, 0, 0])\n",
-    "numSpheres2Draw= 11\n",
+    "farAwayPostion = np.array([30*radius, 0, 0])\n",
+    "numSpheres2Draw= 15\n",
+    "# Define reference vectors for plotting small protein\n",
+    "refVec1 = np.array([0., 1., 0.])\n",
+    "refVec2 = np.array([-1., 0., 0.])\n",
+    "refVec3 = np.array([0., -1., 0.])\n",
+    "refVec4 = np.array([0., 0., 1.])\n",
+    "refVec5 = np.array([0., 0., -1.])\n",
+    "# Loop over all timesteps, read data and output plot.\n",
     "for i in  range(timesteps):\n",
     "    if i%stride == 0:\n",
     "        datafile.write(str(numSpheres2Draw) + '\\n')\n",
@@ -153,31 +161,33 @@
     "                datafile.write('type_1' + ' ' + ' '.join(map(str, v5)) + '\\n')\n",
     "                datafile.write('type_1' + ' ' + ' '.join(map(str, v6)) + '\\n')\n",
     "            if part.type == 1:\n",
-    "                v0 = part.position\n",
-    "                if part.state == 0:\n",
-    "                    v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "                    v0 = part.position\n",
+    "                    #if part.state == 0:\n",
+    "                    v1 = v0 + 0.3*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "                    v2 = v0 + 0.3*sigma*quats.rotateVec(refVec1, part.orientation)\n",
+    "                    v3 = v0 + 0.3*sigma*quats.rotateVec(refVec2, part.orientation)\n",
+    "                    v4 = v0 + 0.3*sigma*quats.rotateVec(refVec3, part.orientation)\n",
+    "                    v5 = v0 + 0.3*sigma*quats.rotateVec(refVec4, part.orientation)\n",
+    "                    v6 = v0 + 0.3*sigma*quats.rotateVec(refVec5, part.orientation)\n",
     "                    # Main particle 2\n",
-    "                    datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
-    "                    datafile.write('type_3' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
-    "                    # Patch\n",
-    "                    datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
-    "                    datafile.write('type_4' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
-    "\n",
-    "                else:\n",
-    "                    v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
-    "                    # Main particle 2\n",
-    "                    datafile.write('type_0' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
     "                    datafile.write('type_3' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
-    "                    # Patch\n",
-    "                    datafile.write('type_2' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
-    "                    datafile.write('type_4' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
-    "\n",
+    "                    datafile.write('type_3' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "                    datafile.write('type_3' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "                    datafile.write('type_3' + ' ' + ' '.join(map(str, v3)) + '\\n')\n",
+    "                    datafile.write('type_3' + ' ' + ' '.join(map(str, v4)) + '\\n')\n",
+    "                    datafile.write('type_3' + ' ' + ' '.join(map(str, v5)) + '\\n')\n",
+    "                    datafile.write('type_3' + ' ' + ' '.join(map(str, v6)) + '\\n')\n",
+    "                    if part.state == 1:\n",
+    "                        datafile.write('type_4' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
+    "                    else:\n",
+    "                        datafile.write('type_4' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "                    \n",
     "    integrator.integrate(partlist)\n",
     "    if i%5000 == 0:\n",
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_patchyProteinsMS(numparticles = numparticles, tclfname = \"../../data/vmd/patchyProteinsMS2vmd.tcl\")\n",
+    "msmrdvis.generateTCL_patchyProteinsMSV2(numparticles = numparticles, tclfname = \"../../data/vmd/patchyProteinsMS2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
   },
@@ -186,7 +196,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "msmrdvis.generateTCL_patchyProteinsMSV2(numparticles = numparticles, tclfname = \"../../data/vmd/patchyProteinsMS2vmd.tcl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Old version of plotting patchy proteinMS\n",
+    "# v0 = part.position\n",
+    "# if part.state == 0:\n",
+    "#     v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "#     # Main particle 2\n",
+    "#     datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "#     datafile.write('type_3' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
+    "#     # Patch\n",
+    "#     datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "#     datafile.write('type_4' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
+    "\n",
+    "# else:\n",
+    "#     v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "#     # Main particle 2\n",
+    "#     datafile.write('type_0' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
+    "#     datafile.write('type_3' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "#     # Patch\n",
+    "#     datafile.write('type_2' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
+    "#     datafile.write('type_4' + ' ' + ' '.join(map(str, v1)) + '\\n')"
+   ]
   },
   {
    "cell_type": "code",
