--- a/examples/models/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/models/patchyProteinsMarkovSwitch.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "# MSM for particle type1 \n",
     "MSMtype = 1\n",
-    "ratematrix = np.array([[-1.0,1.0],[8.0,-8.0]])\n",
+    "ratematrix = np.array([[-0.5,0.5],[6.0,-6.0]])\n",
     "seed = 0 # If seed = -1 uses random device as seed\n",
     "markovModel1 = ctmsm(MSMtype, ratematrix, seed)\n",
     "D1list = np.array([0.5, 1.0])\n",
@@ -100,7 +100,6 @@
     "# # Define Patchy Protein potential\n",
     "sigma = 1.0\n",
     "strength = 65\n",
-    "referencePatch1 = np.array([0.,0.,1.])\n",
     "# The index i and i+1 of patchesCoordinates1 must be orthogonal for potential to work correctly.\n",
     "patchesCoordinates1 = [np.array([1.,0.,0.]), \n",
     "                       np.array([0.,1.,0.]),\n",
@@ -111,8 +110,6 @@
     "patchesCoordinates2 = [np.array([1.,0.,0.])]\n",
     "# Defines patchy protein potential\n",
     "potentialPatchyProteinMS = patchyProteinMarkovSwitch(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
-    "# Sets reference patch for particle2 to define 3 degree of freedom orientation (only one patch is not enough)\n",
-    "potentialPatchyProteinMS.setReferencePatch(referencePatch1) \n",
     "# Incorporate potential into integrator\n",
     "integrator.setPairPotential(potentialPatchyProteinMS)"
    ]
@@ -125,8 +122,8 @@
    "source": [
     "# Integrate particle list and print only positions. Adds an extra far away particle to \n",
     "# emulate change of color/conformation since VMD can only handle a fixed number of particle with fixed types.\n",
-    "timesteps = 1000000 #50000000\n",
-    "stride = 1000 #10 #1000\n",
+    "timesteps = 500000 #50000000\n",
+    "stride = 100 #10 #1000\n",
     "datafile  = open('../../data/vmd/patchyProteinsMS.xyz', 'w')\n",
     "farAwayPostion = np.array([30*radius, 0, 0])\n",
     "numSpheres2Draw= 15\n",
