Set patchy protein trajectory

--- a/examples/models/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/models/patchyProteinsMarkovSwitch.ipynb
@@ -97,10 +97,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Define Patchy Protein potential\n",
+    "# Define Patchy Protein potential\n",
     "sigma = 1.0\n",
     "strength = 65\n",
-    "# The index i and i+1 of patchesCoordinates1 must be orthogonal for potential to work correctly.\n",
+    "# This values are fixed and should match those used to determine metastable states in potential and trajectory.\n",
     "patchesCoordinates1 = [np.array([1.,0.,0.]), \n",
     "                       np.array([0.,1.,0.]),\n",
     "                       np.array([0.,0.,1.]),\n",
@@ -112,6 +112,34 @@
     "potentialPatchyProteinMS = patchyProteinMarkovSwitch(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
     "# Incorporate potential into integrator\n",
     "integrator.setPairPotential(potentialPatchyProteinMS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creates simulation\n",
+    "sim = msmrd2.simulation(integrator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bufferSize = 1024\n",
+    "stride = 25\n",
+    "outTxt = True\n",
+    "outH5 = False\n",
+    "outChunked = False\n",
+    "trajtype = \"patchyDimer\"\n",
+    "timesteps = 500000 #50000000\n",
+    "stride = 100\n",
+    "filename = \"../../data/patchyProtein/benchmark/test\"\n",
+    "sim.run(partlist, timesteps, stride, bufferSize, filename, outTxt, outH5, outChunked, trajtype)"
    ]
   },
   {
